# snackcoin

./: .gitignore  build.sh
client/: package.json
client/src/: index.html  main.js
crates/tarhandler/: Cargo.toml
crates/tarhandler/src/: fs.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs  options.rs
server/src/routes/: api.rs  mod.rs  statics.rs
